# chess

./: CMakeLists.txt  README.md  mytest.h  tags
chess/: Board.cpp  Board.h  ChooseDlg.cpp  NetGame.cpp  main.cpp
